Fix header overflow and enlarge logo

--- a/style.css
+++ b/style.css
@@ -11,9 +11,14 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1.2em 2em;
-  background: white;
-  position: sticky;
+  box-sizing: border-box;
+  background-color: rgba(255, 255, 255, 0.6);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  position: fixed;
+  width: 100%;
   top: 0;
+  left: 0;
   z-index: 1000;
 }
 
@@ -21,6 +26,7 @@ header {
   font-weight: 600;
   text-decoration: none;
   color: black;
+  font-size: 1.5rem;
 }
 
 nav a {
